Atualiza fotos da barbearia

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           </div>
         </div>
         <figure class="hero__media">
-          <img src="assets/ambiente.jpg" alt="Ambiente da Barbearia Clube da Navalha" />
+          <img src="assets/foto-3.jpg" alt="Fachada da Barbearia Clube da Navalha" />
           <figcaption>#clubeDaNavalha</figcaption>
         </figure>
       </div>
@@ -71,6 +71,10 @@
             <p>+ de 5 mil cortes</p>
             <span>confiança & tradição</span>
           </div>
+        </div>
+        <div class="container gallery">
+          <img src="assets/foto-1.jpg" alt="Recepção da barbearia" />
+          <img src="assets/foto-2.jpg" alt="Ambiente interno da barbearia" />
         </div>
       </section>
 
